Fix: Activity Bar icon rendering issue
Replaced invalid PNG with a theme-aware SVG mask (currentColor) for the Activity Bar icon to prevent 'black square' rendering on macOS/VS Code.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         {
           "id": "loglens-container",
           "title": "LogLens",
-          "icon": "$(list-filter)"
+          "icon": "resources/icon.svg"
         }
       ]
     },
