feat: Per-Filter Highlight Colors and UI Improvements
This feature allows users to set distinct highlight colors for each filter, enhancing log visibility.

- **Per-Filter Colors**: Added 'color' property to FilterItem. Filters now have unique colors.
- **Color Presets**: Introduced 16 theme-aware color presets (Solarized-inspired) with Light/Dark variants.
- **UI Updates**: Filter Tree items now display a colored dot icon. Added 'Change Color' command with a rich QuickPick dialog showing color previews and RGBA values.
- **Highlight Service**: Refactored to support multiple dynamic decoration types based on filter colors.

--- a/package.json
+++ b/package.json
@@ -121,6 +121,11 @@
         "command": "loglens.disableFilter",
         "title": "Disable Filter",
         "icon": "$(pass-filled)"
+      },
+      {
+        "command": "loglens.changeFilterColor",
+        "title": "Change Color",
+        "icon": "$(paintcan)"
       }
     ],
     "menus": {
@@ -175,6 +180,11 @@
         {
           "command": "loglens.deleteFilter",
           "when": "view == loglens-filters || view == loglens-regex-filters",
+          "group": "inline"
+        },
+        {
+          "command": "loglens.changeFilterColor",
+          "when": "view == loglens-filters && (viewItem == filterItemEnabled || viewItem == filterItemDisabled)",
           "group": "inline"
         }
       ]
