feat: Add context menu command
This commit introduces a new context menu item "Add Selection to LogMagnifier"
that allows users to quickly add the selected text as a filter.

Key changes:
- Register `logmagnifier.addSelectionToFilter` command in `package.json`.
- Add `editor/context` menu contribution for the new command.
- Inject `TreeView` instance into `CommandManager` to determine the
  currently focused filter group.
- Implement logic to add the selection to the focused group, or create
  a new group if none is focused.
- Enforce unique keywords within a group by checking for duplicates
  regardless of the filter type (include/exclude).

--- a/package.json
+++ b/package.json
@@ -618,6 +618,11 @@
         "command": "logmagnifier.importRegexFilters",
         "title": "Import Regex Filters",
         "icon": "$(repo-pull)"
+      },
+      {
+        "command": "logmagnifier.addSelectionToFilter",
+        "title": "Add Selection to LogMagnifier",
+        "icon": "$(plus)"
       }
     ],
     "menus": {
@@ -671,6 +676,13 @@
           "command": "logmagnifier.applyRegexFilter",
           "when": "view == logmagnifier-regex-filters",
           "group": "navigation@5"
+        }
+      ],
+      "editor/context": [
+        {
+          "command": "logmagnifier.addSelectionToFilter",
+          "when": "editorHasSelection",
+          "group": "1_modification"
         }
       ],
       "view/item/context": [
