profiles: refine filter profile management and persistence
Enhance the filter profile system to improve usability and data safety.

- Implement auto-save mechanism for the active profile. Changes to
  filter groups are now automatically persisted to the currently active
  profile in global state, preventing data loss on reload or switch.
- Persist 'Default' profile changes. Previously, the default profile
  could be reset or lost; now it is treated as a persistent profile
  that cannot be deleted but saves its state like any other.
- Update profile management UI (Quick Pick):
  - Rename 'Save Current Profile' to 'Duplicate Profile' to better
    reflect the action of cloning the current state to a new name.
  - Add 'New Profile' option to create empty profiles.
  - Display deletion button for non-default profiles directly in the list.
  - Show granular group counts (Word vs Regex) in profile descriptions.

--- a/package.json
+++ b/package.json
@@ -731,6 +731,11 @@
         "command": "logmagnifier.editFilterItem",
         "title": "Rename...",
         "icon": "$(edit)"
+      },
+      {
+        "command": "logmagnifier.manageProfiles",
+        "title": "Filter Profiles...",
+        "icon": "$(book)"
       }
     ],
     "submenus": [
