context-menu: add enable/disable all items to group
Implement functionality to enable or disable all filter items within a
specific group via the context menu. This adds two new commands:
'logmagnifier.enableAllItemsInGroup' and
'logmagnifier.disableAllItemsInGroup'.

These commands are exposed in the group context menu under a separate
group '2_state_batch' to visually distinguish them from single-group
state toggles.

--- a/package.json
+++ b/package.json
@@ -736,6 +736,16 @@
         "command": "logmagnifier.manageProfiles",
         "title": "Filter Profiles...",
         "icon": "$(book)"
+      },
+      {
+        "command": "logmagnifier.enableAllItemsInGroup",
+        "title": "Enable All Items",
+        "icon": "$(check-all)"
+      },
+      {
+        "command": "logmagnifier.disableAllItemsInGroup",
+        "title": "Disable All Items",
+        "icon": "$(circle-slash)"
       }
     ],
     "submenus": [
@@ -974,6 +984,16 @@
           "command": "logmagnifier.disableGroup",
           "when": "viewItem =~ /filterGroup.*/ && (view == logmagnifier-filters || view == logmagnifier-regex-filters)",
           "group": "2_state"
+        },
+        {
+          "command": "logmagnifier.enableAllItemsInGroup",
+          "when": "viewItem =~ /filterGroup.*/ && (view == logmagnifier-filters || view == logmagnifier-regex-filters)",
+          "group": "2_state_batch"
+        },
+        {
+          "command": "logmagnifier.disableAllItemsInGroup",
+          "when": "viewItem =~ /filterGroup.*/ && (view == logmagnifier-filters || view == logmagnifier-regex-filters)",
+          "group": "2_state_batch"
         },
         {
           "command": "logmagnifier.renameFilterGroup",
