--- a/package.json
+++ b/package.json
@@ -857,6 +857,11 @@
         "command": "logmagnifier.removeLogcatTag",
         "title": "Remove Tag",
         "icon": "$(trash)"
+      },
+      {
+        "command": "logmagnifier.control.toggleShowTouches",
+        "title": "Toggle Show Touches",
+        "icon": "$(check)"
       }
     ],
     "submenus": [
