editor: make remove matches threshold configurable
Increase the default threshold for confirming removal of lines matching
a selection from 100 to 2000.
Add a new configuration setting `logmagnifier.removeMatches.maxLines`
to allow users to customize this threshold.

--- a/package.json
+++ b/package.json
@@ -348,6 +348,16 @@
         }
       },
       {
+        "title": "Remove Matches",
+        "properties": {
+          "logmagnifier.removeMatches.maxLines": {
+            "type": "number",
+            "default": 2000,
+            "description": "Threshold for confirming removal of lines matching selection."
+          }
+        }
+      },
+      {
         "title": "Android",
         "properties": {
           "logmagnifier.adbPath": {
