bookmark: fix word wrap shortcut activation
Broaden the 'when' clause in package.json to allow ctrl+cmd+w to work
from the editor. Add a status bar message in the command manager to
provide visual feedback when word wrap is toggled.

--- a/package.json
+++ b/package.json
@@ -451,7 +451,7 @@
       {
         "command": "logmagnifier.bookmark.toggleWordWrap",
         "key": "ctrl+cmd+w",
-        "when": "focusedView == logmagnifier-bookmark"
+        "when": "editorTextFocus || focusedView == logmagnifier-bookmark"
       }
     ],
     "commands": [
