bookmark: refine word wrap shortcut context
Split ctrl+cmd+w shortcut into two contexts:
- Toggles editor word wrap when editor is focused.
- Toggles bookmark word wrap when bookmark view is focused.

--- a/package.json
+++ b/package.json
@@ -449,9 +449,14 @@
         "when": "editorTextFocus"
       },
       {
+        "command": "logmagnifier.toggleWordWrap",
+        "key": "ctrl+cmd+w",
+        "when": "editorTextFocus"
+      },
+      {
         "command": "logmagnifier.bookmark.toggleWordWrap",
         "key": "ctrl+cmd+w",
-        "when": "editorTextFocus || focusedView == logmagnifier-bookmark"
+        "when": "focusedView == logmagnifier-bookmark"
       }
     ],
     "commands": [
